# microservice

./: .gitignore  CMakeLists.txt  README.md  main.cpp
proto/: CMakeLists.txt  room.proto
src/: CMakeLists.txt
src/first_service/: CMakeLists.txt  service.cpp  service.h
src/proxy_service/: CMakeLists.txt  service.cpp  service.h
src/room_service/: CMakeLists.txt  room_service.cpp  room_service.h
